--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ img {
 }
 
 .card {
-  display: grid;
+
   text-align: center;
   border-radius: 50px;
   box-shadow: 2px 2px 3px #ebecf1;
@@ -16,6 +16,11 @@ img {
   margin: 1em;
   background: white;
 
+}
+
+.contain {
+  display: flex;
+  align-items: center;
 }
 
 h1 {
@@ -45,6 +50,11 @@ ul {
   font-family: Lora, sans-serif;
   list-style: none;
 
+}
+
+li {
+  text-align: left;
+  margin-top: 4px;
 }
 
 .social_media {
